--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="styles/css/test.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <section style="background-color: aqua;"></section>
+    <section style="background-color: blue;"></section>
+    <section style="background-color: yellow;"></section>
+    <section style="background-color: aqua;"></section>
+    <section style="background-color: aqua;"></section>
+    <section style="background-color: aqua;"></section>
+    <section style="background-color: aqua;"></section>
 </body>
 </html>
