--- a/index.html
+++ b/index.html
@@ -6,14 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/css/test.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section style="background-color: aqua;"></section>
-    <section style="background-color: blue;"></section>
-    <section style="background-color: yellow;"></section>
-    <section style="background-color: aqua;"></section>
-    <section style="background-color: aqua;"></section>
-    <section style="background-color: aqua;"></section>
-    <section style="background-color: aqua;"></section>
+    <header>
+        <div class="logo">LOGO PLACEHOLDER</div>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-item active">Home</li>
+                <li class="nav-item">Menu item 2</li>
+                <li class="nav-item">Menu item 3</li>
+                <li class="nav-item">Menu item 4</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section style="background-color: aqua;"></section>
+        <section style="background-color: blue;"></section>
+        <section style="background-color: yellow;"></section>
+        <section style="background-color: aqua;"></section>
+        <section style="background-color: aqua;"></section>
+        <section style="background-color: aqua;"></section>
+        <section style="background-color: aqua;"></section>
+    </main>
 </body>
 </html>
