Added search icon to navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="nav-item">Menu item 2</li>
                 <li class="nav-item">Menu item 3</li>
                 <li class="nav-item">Menu item 4</li>
+                <li class="nav-item search"><img src="public/img/search.svg" alt="Search"></li>
             </ul>
         </nav>
     </header>
