Started creating three split section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
     <main>
         <section style="background-color: aqua;"></section>
         <section style="background-color: blue;"></section>
-        <section style="background-color: yellow;"></section>
+        <section class="three-split">
+            <div class="split">
+                <div class="split-title">Choose colour</div>
+            </div>
+            <div class="split">
+                <div class="split-title">Exterior</div>
+            </div>
+            <div class="split">
+                <div class="split-title">Interior</div>
+            </div>
+        </section>
         <section style="background-color: aqua;"></section>
         <section style="background-color: aqua;"></section>
         <section style="background-color: aqua;"></section>
