Fixed three split section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/css/test.css">
+    <link rel="stylesheet" href="styles/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -28,12 +28,16 @@
         <section style="background-color: blue;"></section>
         <section class="three-split">
             <div class="split">
+                <img src="https://via.placeholder.com/480x800" alt="">
+                <div class="split-text">Here are some of our features &rarr;</div>
                 <div class="split-title">Choose colour</div>
             </div>
             <div class="split">
+                <img src="https://via.placeholder.com/480x800" alt="">
                 <div class="split-title">Exterior</div>
             </div>
             <div class="split">
+                <img src="https://via.placeholder.com/480x800" alt="">
                 <div class="split-title">Interior</div>
             </div>
         </section>
