--- a/index.html
+++ b/index.html
@@ -24,8 +24,30 @@
         </nav>
     </header>
     <main>
-        <section style="background-color: aqua;"></section>
-        <section style="background-color: blue;"></section>
+        <section class="hero">
+            <img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">
+            <div class="hero-meta">
+                <div class="hero-title">
+                    <span class="hero-normal">You are special.</span><br/>
+                    <span class="hero-bold">Smoove.</span>
+                </div>
+                <button class="hero-button">CTA</button>
+            </div>
+            <div class="down-button"></div>
+        </section>
+        <section class="info">
+            <img src="https://via.placeholder.com/470x300" alt="">
+            <h3>Geely is bringing car driving to the next level. We are on the go for the future.</h3>
+            <img src="https://via.placeholder.com/470x300" alt="">
+            <div>
+                <h4>Lorem Ipsum</h4>
+                <p>Our aim is to become one of the world’s most innovative companies.</p>
+            </div>
+            <div>
+                <h4>Lorem Ipsum</h4>
+                <p>And now we are proud to present our car for the future: Smove.</p>
+            </div>
+        </section>
         <section class="three-split">
             <div class="split">
                 <img src="https://via.placeholder.com/480x800" alt="">
@@ -41,18 +63,7 @@
                 <div class="split-title">Interior</div>
             </div>
         </section>
-        <section class="info">
-            <img src="https://via.placeholder.com/470x300" alt="">
-            <h3>Geely is bringing car driving to the next level. We are on the go for the future.</h3>
-            <img src="https://via.placeholder.com/470x300" alt="">
-            <div>
-                <h4>Lorem Ipsum</h4>
-                <p>Our aim is to become one of the world’s most innovative companies.</p>
-            </div>
-            <div>
-                <h4>Lorem Ipsum</h4>
-                <p>And now we are proud to present our car for the future: Smove.</p>
-            </div>
+        <section class="two-split">
         </section>
         <section style="background-color: yellow;"></section>
         <section style="background-color: aqua;"></section>
