--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         <section class="info">
             <img src="https://via.placeholder.com/470x300" alt="">
-            <h3>Geely is bringing car driving to the next level. We are on the go for the future.</h3>
+            <h3 class="infoText">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
             <img src="https://via.placeholder.com/470x300" alt="">
             <div>
                 <h4>Lorem Ipsum</h4>
