centered info section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
         </section>
         <section class="info">
+            <div class="container">
             <img src="https://via.placeholder.com/470x300" alt="">
             <h3 class="infoText">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
             <img src="https://via.placeholder.com/470x300" alt="">
@@ -74,6 +75,7 @@
             <div>
                 <h4>Lorem Ipsum</h4>
                 <p>And now we are proud to present our car for the future: Smove.</p>
+            </div>
             </div>
         </section>
         <section class="two-split">
