Removing anchor links from url

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </section>
         <section style="background-color: yellow;"></section>
         <section style="background-color: aqua;"></section>
-        <section style="background-color: aqua;"></section>
-        <section style="background-color: aqua;"></section>
-        <section style="background-color: aqua;"></section>
+        <section style="background-color:  tomato;"></section>
+        <section style="background-color: greenyellow;"></section>
+        <section style="background-color: grey;"></section>
     </main>
     <script src="/js/index.js"></script>
 </body>
