Added three split section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
             </div>
         </section>
         <section class="two-split">
+            <div class="grid-container">
+                <div class="title grid-first">
+                    <h3>Lorem Ipsum</h3>
+                </div>
+                <div class="grid-image grid-second">
+                    <img src="https://via.placeholder.com/600x475" alt="">
+                </div>
+                <div class="grid-image grid-third">
+                    <img src="https://via.placeholder.com/600x475" alt="">
+                </div>
+            </div>
         </section>
         <section style="background-color: yellow;"></section>
         <section style="background-color: aqua;"></section>
