--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header id="header">
-        <div class="logo">LOGO PLACEHOLDER</div>
+        <div class="logo">Smoove</div>
         <nav>
             <ul class="nav-list">
                 <li class="nav-item active">Home</li>
