Created half split and started slideshow sections. Added miami vice font

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">
+            <!--<img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">-->
             <div class="hero-meta">
                 <div class="hero-title">
                     <span class="hero-normal">You are special.</span><br/>
@@ -39,17 +39,21 @@
         </section>
         <section class="info" id="info">
             <div class="container">
-            <img src="https://via.placeholder.com/470x300" alt="">
-            <h3 class="infoText">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
-            <img src="https://via.placeholder.com/470x300" alt="">
-            <div>
-                <h4>Lorem Ipsum</h4>
-                <p>Our aim is to become one of the world’s most innovative companies.</p>
-            </div>
-            <div>
-                <h4>Lorem Ipsum</h4>
-                <p>And now we are proud to present our car for the future: Smove.</p>
-            </div>
+                <img src="https://via.placeholder.com/470x300" alt="">
+                <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
+                <img src="https://via.placeholder.com/470x300" alt="">
+                <div class="info-text-container">
+                    <div class="info-text">
+                        <h4>Lorem Ipsum</h4>
+                        <p>Our aim is to become one of the world’s most innovative companies.</p>
+                    </div>
+                </div>
+                <div class="info-text-container">
+                    <div class="info-text">
+                        <h4>Lorem Ipsum</h4>
+                        <p>And now we are proud to present our car for the future: Smove.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="three-split">
@@ -80,9 +84,25 @@
                 </div>
             </div>
         </section>
-        <section style="background-color: yellow;"></section>
-        <section style="background-color: aqua;"></section>
-        <section style="background-color:  tomato;"></section>
+        <section class="half-split">
+            <div class="split">
+                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
+            </div>
+            <div class="split">
+                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
+            </div>
+        </section>
+        <section class="half-split">
+            <div class="split">
+                <p>Lorem Ipsum</p>
+            </div>
+            <div class="split">
+                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
+            </div>
+        </section>
+        <section class="image-slider">
+            <img src="https://via.placeholder.com/1300x750" alt="">
+        </section>
         <section style="background-color: greenyellow;"></section>
         <section style="background-color: grey;"></section>
     </main>
