--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
         <div class="logo">Smoove</div>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item active">Home</li>
-                <li class="nav-item">Menu item 2</li>
-                <li class="nav-item">Menu item 3</li>
-                <li class="nav-item">Menu item 4</li>
-                <li class="nav-item search">
-                    <img class="search-white" src="public/img/search-white.svg" alt="Search">
-                </li>
+                <li class="nav-item active">Our car</li>
+                <li class="nav-item">About us</li>
+                <li class="nav-item">Contact</li>
             </ul>
         </nav>
     </header>
@@ -101,11 +97,12 @@
             </div>
         </section>
         <section class="image-slider">
-            <img src="https://via.placeholder.com/1300x750" alt="">
         </section>
-        <section style="background-color: greenyellow;"></section>
-        <section style="background-color: grey;"></section>
     </main>
+
+    <footer>
+        <h1>FOOTER</h1>
+    </footer>
     <script src="/js/index.js"></script>
 </body>
 </html>
