--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/js/splide.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/css/splide.min.css">
 </head>
 <body>
     <header id="header">
@@ -97,6 +99,18 @@
             </div>
         </section>
         <section class="image-slider">
+            <div class="slideshow-container">
+                <div class="splide slideshow" id="slideshow">
+                    <div class="splide__track">
+                        <ul class="splide__list slideshow_list">
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
