--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="nav-item active">Our car</li>
                 <li class="nav-item">About us</li>
                 <li class="nav-item">Contact</li>
+                <li class="nav-item"><img id="language" src="/public/img/globe.svg" alt=""></li>
             </ul>
         </nav>
     </header>
