Added correct font, added second image slider

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/js/splide.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/css/splide.min.css">
 </head>
@@ -32,11 +33,19 @@
                     <span class="hero-normal">You are special.</span><br/>
                     <span class="hero-bold">Smoove.</span>
                 </div>
-                <button class="hero-button">CTA</button>
+                <div class="hero-text">
+                    Enter the lottery to win your own Smoove.<br />
+                    Enter the lottery to win your own Smoove.<br />
+                    Enter the lottery to win your own Smoove.
+                </div>
+                <button class="hero-button">Enter lottery</button>
             </div>
-            <a href="#info" class="down-button"></a>
+            <a href="#next" class="down-button"></a>
         </section>
-        <section class="info" id="info">
+        <section class="big-img" id="next">
+            <img src="https://via.placeholder.com/1500x750" alt="">
+        </section>
+        <section class="info">
             <div class="container">
                 <img src="https://via.placeholder.com/470x300" alt="">
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
@@ -68,6 +77,24 @@
             <div class="split">
                 <img src="https://via.placeholder.com/480x800" alt="">
                 <div class="split-title">Interior</div>
+            </div>
+        </section>
+        <section class="small-slideshow">
+            <div class="slideshow-container">
+                <div class="splide slideshow" id="small-slideshow">
+                    <div class="splide__track">
+                        <ul class="splide__list slideshow_list">
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="two-split">
