--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header id="header">
-        <div class="logo">Smoove</div>
+        <div class="logo"><img src="/public/img/logo_white.svg" alt=""></div>
         <nav>
             <ul class="nav-list">
                 <li class="nav-item active">Our car</li>
