--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMOOVE</title>
     <link rel="stylesheet" href="styles/css/index.css">
+    <link rel="stylesheet" href="styles/css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -17,6 +18,15 @@
     <header id="header">
         <div class="logo"><img src="/public/img/logo_white.svg" alt=""></div>
         <nav>
+            <div class="hamburger"><img src="/public/img/hamburger.svg" alt=""></div>
+            <div class="mobile-nav-container">
+                <div class="mobile-nav-close" id="close"><img src="/public/img/close.svg" alt=""></div>
+                <ul class="mobile-nav">
+                    <li class="nav-item active">Our car</li>
+                    <li class="nav-item">About us</li>
+                    <li class="nav-item">Contact</li>
+                </ul>
+            </div>
             <ul class="nav-list">
                 <li class="nav-item active">Our car</li>
                 <li class="nav-item">About us</li>
