--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
                         </ul>
                     </div>
                 </div>
+                <div class="splide slideshow" id="mobile-slideshow">
+                    <div class="splide__track">
+                        <ul class="splide__list slideshow_list">
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="two-split">
