Updated language box

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
                 <li class="nav-item nav-item-relative">
                     <img id="language" src="/public/img/globe.svg" alt="">
                     <div class="language-box">
-                        <img class="arrow-up" src="/public/img/arrow-up.svg" alt="">
-                        <h4>Choose language</h4>
-                        <select name="lang" id="lang-switcher">
-                            <option value="swe">Swedish | Svenska</option>
-                            <option value="eng">English | Engelska</option>
-                        </select>
-                        <button id="lang-save">Save</button>
+                        <ul>
+                            <li><strong>English</strong></li>
+                            <li>Swedish</li>
+                            <li>Spanish</li>
+                        </ul>
                     </div>
                 </li>
             </ul>
