Added bottom enter lottery button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Enter the lottery to win your own Smoove.<br />
                     Enter the lottery to win your own Smoove.
                 </div>
-                <button class="hero-button">Enter lottery</button>
+                <a href=""><button class="hero-button">Enter lottery</button></a>
             </div>
             <a href="#next" class="down-button"></a>
         </section>
@@ -172,6 +172,7 @@
                     </div>
                 </div>
             </div>
+            <a href=""><button>Enter lottery</button></a>
         </section>
     </main>
 
