Fixed new design for three split section

--- a/index.html
+++ b/index.html
@@ -84,10 +84,28 @@
             </div>
         </section>
         <section class="three-split">
-            <div class="split">
-                <img src="https://via.placeholder.com/480x800" alt="">
-                <div class="split-text">Here are some of our features &rarr;</div>
-                <div class="split-title">Choose colour</div>
+            <div class="split grid-split">
+                <div class="grid-split-item">
+                    <div class="grid-split-text">
+                        330<span class="small">Km/h</span><br>
+                        <div class="converted">205 MPH</div>
+                    </div>
+                </div>
+                <div class="grid-split-item">
+                    <div class="grid-split-text">
+                        720<span class="small">Nm</span><br>
+                        <div class="converted">531 lb-ft</div>
+                    </div>
+                </div>
+                <div class="grid-split-item">
+                    <div class="grid-split-text">
+                        680<span class="small">Ps</span><br>
+                        <div class="converted">671 | bhp</div>
+                    </div>
+                </div>
+                <div class="grid-split-item">
+                    <p>Here are some of our features <img src="/public/img/arrow-right.svg" alt=""></p>
+                </div>
             </div>
             <div class="split">
                 <img src="https://via.placeholder.com/480x800" alt="">
