Added interior/exterior images

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                 </div>
             </div>
             <div class="split">
-                <img src="https://via.placeholder.com/480x800" alt="">
+                <img src="/public/img/exterior.jpg" alt="">
                 <div class="split-title">Exterior</div>
             </div>
             <div class="split">
-                <img src="https://via.placeholder.com/480x800" alt="">
+                <img src="/public/img/interior.jpg" alt="">
                 <div class="split-title">Interior</div>
             </div>
         </section>
