Fixed darkmode based on device settings

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="styles/css/index.css">
     <link rel="stylesheet" href="styles/css/media.css">
     <link rel="stylesheet" href="styles/css/atoms.css">
+    <link rel="stylesheet" href="/styles/css/darkmode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&family=Oxygen:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/js/splide.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.3.1/dist/css/splide.min.css">
 </head>
-<body>
+<body class="dark">
     <header id="header">
         <div class="logo"><img src="/public/img/logo_white.svg" alt=""></div>
         <nav>
@@ -180,7 +181,13 @@
         </section>
         <section class="half-split">
             <div class="split">
-                <p>Lorem Ipsum</p>
+                <h2>Lorem ipsum</h2>
+                <p>Swoove has the cutting edge techniques;<br>
+                    we put your experience first and we promise it<br> 
+                    will be a smooth ride.<br><br>
+                    
+                    Today we are starting a new chapter.<br> 
+                    Smoove; it is the future.</p>
             </div>
             <div class="split">
                 <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
