Removed two split section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </section>
-        <section class="two-split">
+        <!-- <section class="two-split">
             <div class="grid-container">
                 <div class="title grid-first">
                     <h3>Lorem Ipsum</h3>
@@ -170,7 +170,7 @@
                     <img src="https://via.placeholder.com/600x475" alt="">
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="half-split">
             <div class="split">
                 <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
