Added final images

--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
         </section>
         <section class="big-img" id="next">
             <!-- https://via.placeholder.com/1500x750 -->
-            <img src="/public/img/test_img2.jpg" alt="">
+            <img src="/public/img/car/people.png" alt="">
         </section>
         <section class="info">
             <div class="container">
-                <img src="https://via.placeholder.com/470x300" alt="">
+                <img src="/public/img/car/moving.png" alt="">
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
-                <img src="https://via.placeholder.com/470x300" alt="">
                 <div class="info-text-container">
                     <div class="info-text">
                         <h4>Lorem Ipsum</h4>
