Added background to hero text

--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
                     <span class="hero-normal">You are special.</span><br/>
                     <span class="hero-bold">Smoove.</span>
                 </div>
-                <div class="hero-text">
-                    Enter the lottery to win your own Smoove.<br />
-                    Enter the lottery to win your own Smoove.<br />
-                    Enter the lottery to win your own Smoove.
+                <div class="text-container">
+                    <div class="hero-text">
+                        Enter the lottery to win your own Smoove.<br>
+                        Highest score gets a free Smoove Model Mono.<br>
+                        All you need is an email and your name.
+                    </div>
+                    <button class="hero-button open-modal">Enter lottery</button>
                 </div>
-                <button class="hero-button open-modal">Enter lottery</button>
             </div>
             <a href="#next" class="down-button button-round">
                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
