--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                             <p>
                                 Dark mode 
                                 <svg class="darkmode-switch" id="darkmode-off" width="50" height="50" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7 13C7.55228 13 8 12.5523 8 12C8 11.4477 7.55228 11 7 11C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path class="dot" d="M7 13C7.55228 13 8 12.5523 8 12C8 11.4477 7.55228 11 7 11C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                                     <path d="M17 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17Z" stroke="currentColor" stroke-width="1.5"/>
                                 </svg>
                                 <svg class="darkmode-switch" id="darkmode-on" width="50" height="50" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M17 13C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11C16.4477 11 16 11.4477 16 12C16 12.5523 16.4477 13 17 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path class="dot" d="M17 13C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11C16.4477 11 16 11.4477 16 12C16 12.5523 16.4477 13 17 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                                     <path d="M17 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17Z" stroke="currentColor" stroke-width="1.5"/>
                                 </svg>                        
                             </p>
@@ -92,11 +92,11 @@
                 <p>
                     Dark mode 
                     <svg class="darkmode-switch" id="darkmode-off" width="50" height="50" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7 13C7.55228 13 8 12.5523 8 12C8 11.4477 7.55228 11 7 11C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path class="dot" d="M7 13C7.55228 13 8 12.5523 8 12C8 11.4477 7.55228 11 7 11C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M17 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17Z" stroke="currentColor" stroke-width="1.5"/>
                     </svg>
                     <svg class="darkmode-switch" id="darkmode-on" width="50" height="50" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17 13C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11C16.4477 11 16 11.4477 16 12C16 12.5523 16.4477 13 17 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path class="dot" d="M17 13C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11C16.4477 11 16 11.4477 16 12C16 12.5523 16.4477 13 17 13Z" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M17 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17Z" stroke="currentColor" stroke-width="1.5"/>
                     </svg>                        
                 </p>
@@ -158,6 +158,7 @@
             </div>
         </section>
         <section class="small-slideshow">
+            <h2>Features</h2>
             <div class="slideshow-container">
                 <div class="splide slideshow" id="small-slideshow">
                     <div class="splide__track">
@@ -203,25 +204,31 @@
             </div>
         </section> -->
         <section class="half-split">
-            <div class="split">
-                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
-            </div>
-            <div class="split">
-                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
+            <h2>The Smoove photo mono book</h2>
+            <div class="half-split-container">
+                <div class="split">
+                    <img src="/public/img/merch/book1.png" alt="" class="split-img">
+                </div>
+                <div class="split">
+                    <img src="/public/img/merch/book2.png" alt="" class="split-img">
+                </div>
             </div>
         </section>
         <section class="half-split">
-            <div class="split">
-                <h2>Lorem ipsum</h2>
-                <p>Swoove has the cutting edge techniques;<br>
-                    we put your experience first and we promise it<br> 
-                    will be a smooth ride.<br><br>
-                    
-                    Today we are starting a new chapter.<br> 
-                    Smoove; it is the future.</p>
-            </div>
-            <div class="split">
-                <img src="https://via.placeholder.com/720x790" alt="" class="split-img">
+            <div class="half-split-container">
+                <div class="split">
+                    <h2>Smoove = Smooth</h2>
+                    <p>Swoove has the cutting edge techniques;<br>
+                        we put your experience first and we promise it<br> 
+                        will be a smooth ride.<br><br>
+                        
+                        Today we are starting a new chapter.<br> 
+                        Smoove; it is the future.</p>
+                    <button>Shop</button>
+                </div>
+                <div class="split">
+                    <img src="/public/img/merch/clock.png" alt="" class="split-img">
+                </div>
             </div>
         </section>
         <section class="image-slider">
@@ -282,7 +289,27 @@
     </main>
 
     <footer>
-        <h1>FOOTER</h1>
+        <div class="footer-content copy"><p>Smoove &copy; 2021</p></div>
+        <div class="footer-content"><a href="#">Contact</a></div>
+        <div class="footer-content"><a href="#">Information</a></div>
+        <div class="footer-content"><a href="#">Geely</a></div>
+        <div class="footer-content social">
+            <div class="social-icon">
+                <a href="">
+                    <img src="/public/img/social/facebook.svg" alt="">
+                </a>
+            </div>
+            <div class="social-icon">
+                <a href="">
+                    <img src="/public/img/social/instagram.svg" alt="">
+                </a>
+            </div>
+            <div class="social-icon">
+                <a href="">
+                    <img src="/public/img/social/youtube.svg" alt="">
+                </a>
+            </div>
+        </div>
     </footer>
     <script src="/js/index.js"></script>
 </body>
