--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header id="header">
         <div class="logo"><img src="/public/img/logo_white.svg" alt=""></div>
         <nav>
-            <div class="hamburger"><img src="/public/img/hamburger.svg" alt=""></div>
+            <div class="hamburger"><img src="/public/img/icons/hamburger.svg" alt=""></div>
             <div class="mobile-nav-container">
-                <div class="mobile-nav-close" id="close"><img src="/public/img/close.svg" alt=""></div>
+                <div class="mobile-nav-close" id="close"><img src="/public/img/icons/close.svg" alt=""></div>
                 <ul class="mobile-nav">
                     <li class="nav-item active">Our car</li>
                     <li class="nav-item">About us</li>
@@ -104,11 +104,11 @@
         </section>
         <section class="big-img" id="next">
             <!-- https://via.placeholder.com/1500x750 -->
-            <img src="/public/img/car/people.png" alt="">
+            <img src="/public/img/car/PNG/Smoove_people_Final.png" alt="">
         </section>
         <section class="info">
             <div class="container">
-                <img src="/public/img/car/moving.png" alt="">
+                <img src="/public/img/car/PNG/Smove_moving_final.png" alt="">
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
                 <div class="info-text-container">
                     <div class="info-text">
@@ -145,15 +145,15 @@
                     </div>
                 </div>
                 <div class="grid-split-item">
-                    <p>Here are some of our features <img src="/public/img/arrow-right.svg" alt=""></p>
+                    <p>Here are some of our features <img src="/public/img/icons/arrow-right.svg" alt=""></p>
                 </div>
             </div>
             <div class="split">
-                <img src="/public/img/exterior.jpg" alt="">
+                <img src="/public/img/car/JPG/exterior_pc_post_purple.jpg" alt="">
                 <div class="split-title">Exterior</div>
             </div>
             <div class="split">
-                <img src="/public/img/interior.jpg" alt="">
+                <img src="/public/img/car/JPG/interior_post_purple.jpg" alt="">
                 <div class="split-title">Interior</div>
             </div>
         </section>
@@ -163,28 +163,20 @@
                 <div class="splide slideshow" id="small-slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_1.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_2.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_3.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_4.jpg" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="splide slideshow" id="mobile-slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/750x500" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/hero.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_2.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_3.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_4.jpg" alt=""></li>
                         </ul>
                     </div>
                 </div>
@@ -207,10 +199,10 @@
             <h2>The Smoove photo mono book</h2>
             <div class="half-split-container">
                 <div class="split">
-                    <img src="/public/img/merch/book1.png" alt="" class="split-img">
+                    <img src="/public/img/merch/book_1.png" alt="" class="split-img">
                 </div>
                 <div class="split">
-                    <img src="/public/img/merch/book2.png" alt="" class="split-img">
+                    <img src="/public/img/merch/book_2.png" alt="" class="split-img">
                 </div>
             </div>
         </section>
@@ -236,10 +228,11 @@
                 <div class="splide slideshow" id="slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
-                            <li class="splide__slide slide"><img src="https://via.placeholder.com/2000x1000" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_1.png" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_2.png" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_3.png" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_4.png" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/PNG/smoove_color/color_5.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
