--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="splide slideshow" id="mobile-slideshow">
                     <div class="splide__track">
                         <ul class="splide__list slideshow_list">
-                            <li class="splide__slide slide"><img src="/public/img/car/JPG/hero.jpg" alt=""></li>
+                            <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_1.jpg" alt=""></li>
                             <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_2.jpg" alt=""></li>
                             <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_3.jpg" alt=""></li>
                             <li class="splide__slide slide"><img src="/public/img/car/JPG/feature_4.jpg" alt=""></li>
@@ -243,7 +243,7 @@
         </section>
         <div class="modal">
             <div class="back-btn" id="close-modal"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"></path></svg></div>
-            <div class="modal-content form">
+            <div class="modal-content form-content">
                 <div class="title">
                     <p>Fill in your name and email below to enter the lottery. The highest score wins the XC309 Smoove.</p>
                 </div>
@@ -277,6 +277,9 @@
                 <script src="public/game/scripts/traffic.js"></script>
                 <script src="public/game/scripts/player.js"></script>
                 <script src="public/game/scripts/game.js"></script>
+            </div>
+            <div class="modal-content mobile">
+                <p>Please visit our website on a desktop to play the game and take part in the lottery.</p>
             </div>
         </div>
     </main>
