--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                 <h3 class="info-title">Geely is bringing car driving to the next level. We are on the go for the future.</h3>
                 <div class="info-text-container">
                     <div class="info-text">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Innovation</h4>
                         <p>Our aim is to become one of the world’s most innovative companies.</p>
                     </div>
                 </div>
                 <div class="info-text-container">
                     <div class="info-text">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>technology</h4>
                         <p>And now we are proud to present our car for the future: Smove.</p>
                     </div>
                 </div>
