--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="info-text-container">
                     <div class="info-text">
-                        <h4>technology</h4>
+                        <h4>Technology</h4>
                         <p>And now we are proud to present our car for the future: Smove.</p>
                     </div>
                 </div>
