fixed text next to game still displaying and added after game screen

--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
                 <script src="public/game/scripts/player.js"></script>
                 <script src="public/game/scripts/game.js"></script>
             </div>
+            <div class="modal-content after-game">
+                <p>Congratulations! Your score has been submitted.<br> Keep an eye on your email to see if you are the lucky<br> winner of a <span>Smoove Mono.</span></p>
+            </div>
             <div class="modal-content mobile">
                 <p>Please visit our website on a desktop to play the game and take part in the lottery.</p>
             </div>
