Added video to hero

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <main>
         <section class="hero">
             <!--<img src="https://via.placeholder.com/2400x1600" alt="" class="hero-img">-->
+            <video src="/public/img/hero.webm" autoplay muted loop></video>
             <div class="hero-meta">
                 <div class="hero-title">
                     <span class="hero-normal">You are special.</span><br/>
